@@ -25,12 +25,6 @@ function assignFacetStats( dest, facetStats, key ) {
   }
 }
 
-function assignFacetTimeout( dest, timeoutCounts, getRankingInfo ) {
-  if ( getRankingInfo ) {
-    dest.timeout = !!( timeoutCounts );
-  }
-}
-
 /**
  * Constructor for SearchResults
  * @class
@@ -111,10 +105,6 @@ var SearchResults = function( state, algoliaResponse ) {
         exhaustive : mainSubResponse.exhaustiveFacetsCount
       };
       assignFacetStats( this.disjunctiveFacets[ position ], mainSubResponse.facets_stats, facetKey );
-      assignFacetTimeout( this.disjunctiveFacets[ position ],
-                          state.getRankingInfo,
-                          mainSubResponse.timeoutCounts,
-                          facetKey );
     }
     else {
       this.facets[ position ] = {
@@ -123,7 +113,6 @@ var SearchResults = function( state, algoliaResponse ) {
         exhaustive : mainSubResponse.exhaustiveFacetsCount
       };
       assignFacetStats( this.facets[ position ], mainSubResponse.facets_stats, facetKey );
-      assignFacetTimeout( this.facets[ position ], state.getRankingInfo, mainSubResponse.timeoutCounts, facetKey );
     }
   }, this );
 
@@ -142,7 +131,6 @@ var SearchResults = function( state, algoliaResponse ) {
         exhaustive : result.exhaustiveFacetsCount
       };
       assignFacetStats( this.disjunctiveFacets[ position ], result.facets_stats, dfacet );
-      assignFacetTimeout( this.disjunctiveFacets[ position ], state.getRankingInfo, result.timeoutCounts, dfacet );
 
       if ( state.disjunctiveFacetsRefinements[dfacet] ) {
         forEach( state.disjunctiveFacetsRefinements[ dfacet ], function( refinementValue ) {
